# ulb-seat

./: .gitignore  README.md  cli.py  pyproject.toml
core/: auth.py  booking.py  db.py  exceptions.py  reservation.py  scheduler.py
src/: auth.py  captcha.py  cli.py  main.py  reservation.py
src/core/: auth.py  captcha.py  db.py  reservation.py  scheduler.py  systemd.py  worker.py
src/web/: __init__.py  app.py
src/web/routes/: __init__.py  dashboard.py  history.py  jobs.py
src/web/templates/: base.html  dashboard.html  history.html  job_form.html  jobs.html
src/web/templates/partials/: alert.html  history_list.html  job_list.html  job_row.html
web/: app.py  auth.py
web/routes/: __init__.py  dashboard.py  history.py  jobs.py  partials.py
web/templates/: dashboard.html  history.html  job_form.html  jobs.html
web/templates/partials/: history_list.html  job_row.html
