[project]
name = "ulb-seat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "apscheduler>=3.11.0,<4",
    "pymysql>=1.1.0",
]
